2009-07-31  Jaroslav Hajek  <highegg@gmail.com>

	* general/common_size: Optimize.

2009-07-29  Ben Abbott <bpabbott@mac.com>

	* plot/__go_draw_axes__.m: Fix ticklabels specified as 2D character
	array.
	* plot/__go_draw_axes__.m: Ignore fontnames for the Lua-TikZ terminal.
	* plot/gnuplot_drawnow.m: Support the gnuplot terminal Lua-TikZ.
	* plot/print.m: Support the gnuplot terminal Lua-TikZ.

2009-07-29  Jaroslav Hajek  <highegg@gmail.com>

	* plot/gnuplot_binary.m: Fix typo.

2009-07-27  Jaroslav Hajek  <highegg@gmail.com>

	* optimization/fzero.m: Use "global" parameter in str2func.
	* optimization/fsolve.m: Ditto.
	* optimization/fminunc.m: Ditto.

2009-07-24  John W. Eaton  <jwe@octave.org>

	* plot/gnuplot_binary.in: Accept arguments in addition to program name.
	* plot/__gnuplot_open_stream__.m: Pass additional args to gnuplot.

2009-07-23  Ben Abbott <bpabbott@mac.com>

	* plot/legend.m: Add an hggroup demo using bar(). Include clf()
	in each demo.

2009-07-23  John W. Eaton  <jwe@octave.org>

	* image/imread.m: Fix test.

	* plot/legend.m: Process arguments in order, child objects in
	reverse.  Remove special case for single label.  New demos.

2009-07-23  Thorsten Meyer  <thorsten.meyier@gmx.de>

	* testfun/assert.m: Fix string comparison bug.

2009-07-20  Jaroslav Hajek  <highegg@gmail.com>

	* testfun/assert.m: Use less strict checking for exact matches.

2009-07-17  John W. Eaton  <jwe@octave.org>

	* plot/__go_draw_axes__.m: Use "layer" property to decide whether
	to send "set border front" or "set border layerdefault" to plot
	stream.  Don't send "set border front" to plot stream for image data.

2009-07-15  Robert T. Short <octave@phaselockedsystems.com>

	* polynomial/conv.m: Fix Matlab incompatibility.  New tests.

2009-07-09  John W. Eaton  <jwe@octave.org>

	* plot/axis.m: Return 4-element vector for 2-d view.
	From David Woodburn <david.woodburn@gmail.com>.

	* sparse/nonzeros.m: Always return a column vector.  New tests.
